--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "csv-writer": "^1.6.0",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.0",
+    "nodemailer": "^7.0.6",
     "pdfkit": "^0.17.2",
     "swagger-ui-express": "^5.0.1",
     "yamljs": "^0.3.0"
