--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js",
-    "start": "node index.js"
+    "start": "node index.js",
+    "migrate:backfill-originals": "node scripts/backfill-originals.js"
   },
   "keywords": [],
   "author": "",
@@ -21,11 +22,16 @@
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "geoip-lite": "^1.4.10",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.0",
     "nodemailer": "^7.0.6",
     "pdfkit": "^0.17.2",
     "swagger-ui-express": "^5.0.1",
     "yamljs": "^0.3.0"
+  },
+  "devDependencies": {
+    "js-yaml": "^4.1.1",
+    "yaml": "^2.8.2"
   }
 }
